# chem_oracle

./: .gitignore  README.md  oracle.yml  pyproject.toml  requirements.txt  setup.py
MSAnalyze/: io.py  ms.py
chem_oracle/: experiment.py  main.py  model.py  monitoring.py  probabilistic_model.py  rdkit_fns.py  util.py
chem_oracle/model/: common.py  numpyro.py  pymc3.py
hplc_analyze/: HPLC_processing_dario.py  hplc_dario.py  hplc_reactivity.py
ms_analyze/: MS_processing_dario.py  io.py  ms.py  ms_dario.py
nmr_analyze/: nmr_analysis.py  nn_model.py  test.py  utils.py
nmr_analyze/models/: .index  checkpoint  fullset.index
sample_data/: data.xlsx
test/: test_condition.py
